# vault-rs

./: Cargo.toml
examples/: basic.rs  json.rs
src/: lib.rs
src/client/: error.rs  mod.rs
