[package]
name = "hashicorp_vault"
version = "2.1.0"
edition = "2018"
authors = [
  "Chris MacNaughton <chmacnaughton@gmail.com>",
  "Christopher Brickley <brickley@gmail.com>"
]
description = "HashiCorp Vault API client for Rust"
license = "MIT"
repository = "https://github.com/chrismacnaughton/vault-rs"

[dependencies]
base64 = "~0.12"
chrono = "~0.4"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
log = "0.4.8"
quick-error = "1.2.3"
url = "2.2.0"
http = "0.2.4"
isahc = {version = "1.3.1", features = ["json", "text-decoding"] }

[dependencies.clippy]
optional = true
version = "^0.0"

[dev-dependencies]
tokio = {version = "1.0", features = ["rt-multi-thread", "macros"] }
tokio-test = "0.4.1"
